fix cookie bug
Cookie confirm popup was covering whole screen, fixed this now displaying bottom right corner.

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -7,7 +7,7 @@
 }
 .freeprivacypolicy-com---palette-light .cc-nb-changep {
   background-color: #eed202 !important;
-  color: #FFF !important;
+  color: #222;
 }
 
   /* BSICT Custom hover styles */
